Adding the Decimate modifier will crash Blender #33606

Closed
opened 2012-12-18 22:28:13 +01:00 by Yaniv Gershoni · 6 comments

%%%I'm using the file attached.
When opening on Official release I can add the Decimate modifier and configure it as "Planer" with any angle I want.
When I open it on versions 53087 and 53095 and 53114 it crash when I try to configure it as "Planer". (the 53087 crash after a while but the other crashed very quicly)

also when I opened this file on version 53114 and try to zoom with the mouse wheel or using the numpad1/3/7 etc the view got very weird zoom so I can't use the zoom any more, I can only rotate with the mouse wheel.

It's not occur when you use the default cube in all versions.

I also try to Append only the mesh from the file and add the modifier on it but Blender crash again.

I tried this with another file and got the same issues.
%%%

%%%I'm using the file attached. When opening on Official release I can add the Decimate modifier and configure it as "Planer" with any angle I want. When I open it on versions 53087 and 53095 and 53114 it crash when I try to configure it as "Planer". (the 53087 crash after a while but the other crashed very quicly) also when I opened this file on version 53114 and try to zoom with the mouse wheel or using the numpad1/3/7 etc the view got very weird zoom so I can't use the zoom any more, I can only rotate with the mouse wheel. It's not occur when you use the default cube in all versions. I also try to Append only the mesh from the file and add the modifier on it but Blender crash again. I tried this with another file and got the same issues. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%We’ll keep [#33607]… ;)

Note it’s better to add a comment when you want to add precisions to a report, rather than adding a new report.%%%

%%%We’ll keep [#33607]… ;) Note it’s better to add a comment when you want to add precisions to a report, rather than adding a new report.%%%

%%%Woops… :p Since Brecht closed the other one, reopening that one!
%%%

%%%Woops… :p Since Brecht closed the other one, reopening that one! %%%

%%%Ha, I just closed #33607, will reopen this one because it has an attached file and the other doesn't.%%%

%%%Ha, I just closed #33607, will reopen this one because it has an attached file and the other doesn't.%%%

%%%fixed r53147.%%%

%%%fixed r53147.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33606
No description provided.