fix [#33606] Adding the Decimate modifier will crash Blender

own regression since 2.65 release.